[project]
name = "hash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pyqt6>=6.10.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
